- update cors configuration;